@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: wm.test,v 1.44 2008/10/08 15:20:17 dgp Exp $
+# RCS: @(#) $Id: wm.test,v 1.45 2008/10/08 15:39:13 dgp Exp $
 
 # This file tests window manager interactions that work across platforms.
 # Window manager tests that only work on a specific platform should be placed
@@ -867,14 +867,14 @@ test wm-iconphoto-1.1 {usage} -returnCodes error -body {
 } -result {wrong # args: should be "wm option window ?arg ...?"}
 test wm-iconphoto-1.2 {usage} -returnCodes error -body {
     wm iconphoto .
-} -result {wrong # args: should be "wm iconphoto window ?-default? image ?image ...?"}
+} -result {wrong # args: should be "wm iconphoto window ?-default? image1 ?image2 ...?"}
 test wm-iconphoto-1.3 {usage} -returnCodes error -body {
     wm iconphoto . notanimage
 } -result {can't use "notanimage" as iconphoto: not a photo image}
 test wm-iconphoto-1.4 {usage} -returnCodes error -body {
     # we currently have no return info
     wm iconphoto . -default
-} -result {wrong # args: should be "wm iconphoto window ?-default? image ?image ...?"}
+} -result {wrong # args: should be "wm iconphoto window ?-default? image1 ?image2 ...?"}
 
 # All other iconphoto tests are platform specific
 
